Add Dynamic JSON Packager Specs (Visa SMS, Mastercard IPM, ISO 8583:1987) with IsoSpecRegistry and developer documentation